
public class TagUtility
{
    public const string TAG_BULLET = "Bullet";
    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "Enemy";
}

public class AnimationTag{
    public const string SKILL_1_TRIGGER = "Skill1";
    public const string SKILL_2_TRIGGER = "Skill2";
    public const string SKILL_3_TRIGGER = "Skill3";
    public const string DASH_TRIGGER = "Dash";
    public const string DEATH_TRIGGER = "Death";
    public const string ATTACK_TRIGGER = "Attack";
}